--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.331.0",
+    "mongodb": "^6.3.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
