--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@formkit/auto-animate": "^0.8.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
