--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "jotai": "^2.6.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.331.0",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-loader-spinner": "^6.1.6",
     "resend": "^3.2.0",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
