--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "input-otp": "^1.2.4",
     "jotai": "^2.6.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.343.0",
